cargo-features = ["edition"]

[package]
authors = ["KillTheMule <KillTheMule@users.noreply.github.com"]
name = "nvimpam"
version = "0.1.2-alpha.0"
exclude = [
    "neovim/*",
    "benches/*",
    "init.vim",
    "lua/*",
    "doc/*",
    "files/*",
    "ftdetect/*",
    "ftplugin/*",
    "rustfmt.toml",
    "test/*",
    ]
description = "A neovim rpc plugin providing folding for PAMCRASH files"
license = "Apache-2.0 OR MIT"
documentation = "https://KillTheMule.github.io/nvimpam/nvimpam"
repository = "https://github.com/KillTheMule/nvimpam"
readme = "README.md"
edition = '2018'

[dependencies]
log = "0.4.1"
simplelog = "0.5.1"
neovim-lib = "0.5.3"
failure = "0.1.1"
itertools = "0.7.8"

[dev-dependencies]
criterion = "0.2.3"

[lib]
name = "nvimpam_lib"
path = "src/lib.rs"

[profile.bench]
lto = true
debug = true

[[bench]]
name = "card"
harness = false

[[bench]]
name = "integration"
harness = false
