[package]
authors = ["KillTheMule <KillTheMule@users.noreply.github.com"]
name = "nvimpam"
version = "0.2.2-alpha.0"
exclude = [
    "neovim/*",
    "benches/*",
    "init.vim",
    "lua/*",
    "doc/*",
    "files/*",
    "ftdetect/*",
    "ftplugin/*",
    "rustfmt.toml",
    "test/*",
    ]
description = "A neovim rpc plugin providing folding for PAMCRASH files"
license = "Apache-2.0 OR MIT"
documentation = "https://KillTheMule.github.io/nvimpam/nvimpam"
repository = "https://github.com/KillTheMule/nvimpam"
readme = "README.md"
autobenches = false

[dependencies]
log = "0.4.5"
simplelog = "0.5.2"
neovim-lib = "0.5.4"
failure = "0.1.2"
itertools = "0.7.8"
atoi = "0.2.3"
byteorder = "1.2.6"

[dev-dependencies]
criterion = "0.2.7"

[lib]
name = "nvimpam_lib"
path = "src/lib.rs"

[profile.bench]
lto = true
debug = true

[profile.release]
lto = true
debug = true

[[bench]]
name = "card"
harness = false

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "integration_file"
harness = false
