[package]
authors = ["KillTheMule <KillTheMule@users.noreply.github.com"]
name = "nvimpam"
version = "0.2.2-alpha.0"
exclude = [
    "neovim/*",
    "benches/*",
    "init.vim",
    "lua/*",
    "doc/*",
    "files/*",
    "ftdetect/*",
    "ftplugin/*",
    "rustfmt.toml",
    "test/*",
    ]
description = "A neovim rpc plugin providing folding for PAMCRASH files"
license = "Apache-2.0 OR MIT"
documentation = "https://KillTheMule.github.io/nvimpam/nvimpam"
repository = "https://github.com/KillTheMule/nvimpam"
readme = "README.md"
autobenches = false
edition = "2018"

[dependencies]
memchr = "2.2.0"
log = "0.4.6"
simplelog = "0.5.3"
#neovim-lib = "0.6.0"
neovim-lib = { path = "neovim-lib" }
failure = "0.1.5"
itertools = "0.8.0"
atoi = "0.3.1"
byteorder = "1.3.1"
lexical = "2.1.0"

[dev-dependencies]
criterion = "0.2.10"

[lib]
name = "nvimpam_lib"
path = "src/lib.rs"
bench = false

[profile.bench]
lto = true
debug = true

[profile.release]
lto = true
debug = true

[[bench]]
name = "card"
harness = false

[[bench]]
name = "integration"
harness = false

[[bench]]
name = "integration_file"
harness = false

[[bench]]
name = "hl_splice"
harness = false
