[package]
name = "neovim-lib"
version = "0.4.3"
authors = ["daa84 <daa84@inbox.ru>"]
license = "LGPL-3.0"
description = "msgpack-rpc neovim client"
documentation = "https://docs.rs/neovim-lib"
repository = "https://github.com/daa84/neovim-lib"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["neovim"]
exclude = ["generate.bat", "Makefile"]

[badges]
travis-ci = { repository = "daa84/neovim-lib", branch = "master"  }

[dependencies]
rmp = "0.8"
rmpv = { version ="0.4", features=["with-serde"] }
log = "0.3"

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5.0"

[dev-dependencies]
tempdir = "0.3"
